# rustkube

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: images.yml
cmd/kube-apiserver/: Cargo.toml
cmd/kube-apiserver/src/: main.rs
cmd/kube-controller-manager/: Cargo.toml
cmd/kube-controller-manager/src/: main.rs
cmd/kube-scheduler/: Cargo.toml
cmd/kube-scheduler/src/: main.rs
crates/apimachinery/src/: certs.rs  lib.rs  meta.rs  store.rs
crates/rk-apiserver/: Cargo.toml
crates/rk-apiserver/src/: config.rs  discovery.rs  error.rs  lib.rs  rbac_engine.rs  server.rs  storage.rs  watch.rs
crates/rk-apiserver/src/handlers/: mod.rs  resource.rs
crates/rk-cloud/: Cargo.toml
crates/rk-cni/: Cargo.toml
crates/rk-cni/src/: ipam.rs  lib.rs
crates/rk-controllers/: Cargo.toml
crates/rk-controllers/src/: deployment.rs  lib.rs  namespace.rs  runner.rs  service.rs
crates/rk-core/: Cargo.toml
crates/rk-core/src/: certs.rs  lib.rs  meta.rs  rbac.rs  watch.rs
crates/rk-dns/: Cargo.toml
crates/rk-dns/src/: authority.rs  forwarder.rs  lib.rs  records.rs  server.rs  syncer.rs
crates/rk-kubelet/: Cargo.toml
crates/rk-kubelet/src/: checkpoint.rs  cri.rs  cri_client.rs  health.rs  kubelet.rs  lib.rs  node_status.rs  pod_manager.rs  runtime.rs  vm_runtime.rs
crates/rk-proxy/: Cargo.toml
crates/rk-proxy/src/: lib.rs  service_map.rs
crates/rk-scheduler/: Cargo.toml
crates/rk-scheduler/src/: lib.rs  score.rs
crates/rk-store/: Cargo.toml
crates/rk-store/src/: adapter.rs  lib.rs
deploy/: gen-node-token.sh  gen-pki.sh  ha-soak-test.sh  new-tcluster.sh  replace-master.sh  verify-cluster.sh
deploy/images/: Dockerfile
deploy/packaging/: nfpm.yaml  postinstall.sh
deploy/systemd/: kube-apiserver.example  kube-apiserver.service  kube-controller-manager.example  kube-controller-manager.service  kube-scheduler.example  kube-scheduler.service
deploy/terragrunt/: README.md  root.hcl
deploy/terragrunt/masters/: terragrunt.hcl
deploy/terragrunt/masters/templates/: master-user-data.yaml.tftpl  worker-user-data.yaml.tftpl
deploy/terragrunt/tclusters/tcluster1/: terragrunt.hcl
deploy/terragrunt/tclusters/tcluster2/: terragrunt.hcl
deploy/terragrunt/tclusters/tcluster3/: terragrunt.hcl
deploy/terragrunt/tclusters/tcluster4/: terragrunt.hcl
deploy/terragrunt/tclusters/templates/: tcluster-user-data.yaml.tftpl
deploy/terragrunt/tclusters/tnode1/: terragrunt.hcl
docs/: draining-multiarch-research.md  scheduler-research.md  terragrunt-deploy.md  upstream-feature-inventory.md
pkg/apimachinery/: Cargo.toml  build.rs
pkg/apimachinery/protos/: README.md
pkg/apimachinery/src/: certs.rs  error.rs  lib.rs  protobuf.rs
pkg/apiserver/: Cargo.toml
pkg/apiserver/src/: admission.rs  aggregation.rs  apply.rs  auth.rs  builtin_admission.rs  config.rs  crd.rs  discovery.rs  error.rs  events.rs  eviction.rs  lib.rs  protobuf_mw.rs  selector.rs  server.rs  storage.rs  tls.rs  watch.rs  watch_cache.rs
pkg/apiserver/src/handlers/: mod.rs  resource.rs  token.rs
pkg/cloud/: Cargo.toml
pkg/cloud/src/: lib.rs
pkg/controller-manager/: Cargo.toml
pkg/controller-manager/src/: backoff.rs  cronjob.rs  csr.rs  daemonset.rs  deployment.rs  events.rs  gateway.rs  gc.rs  hpa.rs  job.rs  leaderelection.rs  lib.rs  metrics_server.rs  migration.rs  namespace.rs  node.rs  pdb.rs  replicaset.rs  runner.rs  service.rs  statefulset.rs
pkg/scheduler/: Cargo.toml
pkg/scheduler/src/: filter.rs  leaderelection.rs  lib.rs  metrics_server.rs  plugins.rs  preemption.rs  scheduler.rs
pkg/storage/: Cargo.toml
pkg/storage/src/: lib.rs
