[package]
name = "kube-apiserver"
description = "Kubernetes API server (Rust) — command entrypoint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kube-apiserver"
path = "src/main.rs"

[dependencies]
apiserver = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
