[package]
name = "kube-controller-manager"
description = "Kubernetes controller manager (Rust) — command entrypoint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kube-controller-manager"
path = "src/main.rs"

[dependencies]
controller-manager = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
