[package]
name = "rk-apiserver"
description = "Kubernetes-compatible API server for RustKube"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rk-core = { workspace = true }
rk-store = { workspace = true }
stormforce-kv = { workspace = true }
stormforce-vault = { workspace = true }
stormforce-registry = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
k8s-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
prost = { workspace = true }
jsonwebtoken = { workspace = true }
json-patch = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
base64 = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
reqwest = { workspace = true }
x509-parser = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
libc = "0.2"

[[bin]]
name = "rustkube-apiserver"
path = "src/bin/rustkube-apiserver.rs"

[[bin]]
name = "rustkube"
path = "src/bin/rustkube.rs"

[dependencies.rk-controllers]
path = "../rk-controllers"

[dependencies.rk-scheduler]
path = "../rk-scheduler"

[dependencies.rk-kubelet]
path = "../rk-kubelet"

[dependencies.rk-proxy]
path = "../rk-proxy"

[dependencies.rk-dns]
path = "../rk-dns"
