[package]
name = "rk-dns"
description = "Cluster DNS server for RustKube (hickory-dns)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apimachinery = { workspace = true }
hickory-server = { workspace = true }
hickory-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
