[package]
name = "rk-proxy"
description = "Service proxy for RustKube (iptables/eBPF)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rk-core = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
