[package]
name = "apimachinery"
description = "Shared types, traits, and error handling for RustKube"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Kubernetes types
k8s-openapi = { workspace = true }

# Protobuf codec for the k8s wire format (analog of k8s.io/apimachinery's
# runtime/serializer/protobuf + the k8s.io/api generated marshalers). Dynamic
# decode/encode via a descriptor pool built from vendored .proto files.
prost = { workspace = true }
prost-reflect = { workspace = true }
once_cell = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Observability
tracing = { workspace = true }
metrics = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }

# Cert utilities
rcgen = { workspace = true }
x509-parser = { workspace = true }
